--- a/requirements.txt
+++ b/requirements.txt
@@ -3,19 +3,22 @@ backcall==0.2.0
 beautifulsoup4==4.9.3
 certifi==2021.5.30
 charset-normalizer==2.0.4
+config==0.3.9
 confusable-homoglyphs==3.2.0
 debugpy==1.4.1
 decorator==5.0.9
 dj-database-url==0.5.0
 Django==3.2.6
 django-bootstrap-datepicker-plus==3.0.5
-django-bootstrap3==15.0.0
 django-bootstrap4==3.0.1
-django-bootstrap5==2.1.1
 django-heroku==0.3.1
+django-mathfilters==1.0.0
 django-registration==3.1.1
+django-restframework==0.0.1
 django-six==1.0.4
 django-tinymce==3.3.0
+djangorestframework==3.12.4
+gunicorn==20.1.0
 idna==3.2
 ipykernel==6.0.3
 ipython==7.26.0
